# primitives

./: CMakeLists.txt  Camera.h  MapperRayTracer.cxx  MapperRayTracer.h  Ray.h  RayTracer.h  Tree.h  TreeIntersector.h  TriangleIntersector.h  main.cpp  test_harness.py
